old code delete code pretify

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@ project(botnet)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(botnet main.cpp Bot.cpp Bot.h Bot1.h)
+add_executable(botnet main.cpp SimpleBot.cpp SimpleBot.h Bot1.h mytime.h)
 
 include_directories(${CURLPP_LIB})
 include_directories(${CURL_LIB})
 
-find_package(Boost COMPONENTS system thread REQUIRED)
+find_package(Boost COMPONENTS system thread timer REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
 target_link_libraries(botnet curlpp curl ${Boost_LIBRARIES} pthread)
