--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(botnet)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(botnet main.cpp SimpleBot.cpp SimpleBot.h)
+add_executable(botnet attack_bot/main.cpp attack_bot/SimpleBot.cpp attack_bot/SimpleBot.h)
+set(CMAKE_CXX_FLAGS_DEBUG -fpermissive)
 
 find_package(Boost COMPONENTS system thread timer REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
