--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 11)
 add_executable(botnet attack_bot/main.cpp attack_bot/SimpleBot.cpp attack_bot/SimpleBot.h)
 set(CMAKE_CXX_FLAGS_DEBUG -fpermissive)
 
-find_package(Boost COMPONENTS system thread timer REQUIRED)
+find_package(Boost COMPONENTS system thread REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
 target_link_libraries(botnet ${Boost_LIBRARIES} pthread)
