--- a/communication-bot_server/makefile
+++ b/communication-bot_server/makefile
@@ -1,13 +1,7 @@
-all: server client bot
+all: server client
 
 server: server.c
 	gcc server.c -o server
 
 client: client.c
 	gcc client.c -o client
-
-bot: bot.c
-	gcc bot.c -o bot
-
-clean:
-	rm rf*
