--- a/communication-bot_server/makefile
+++ b/communication-bot_server/makefile
@@ -2,6 +2,8 @@ all: server client
 
 server: server.c
 	gcc server.c -o server
+	mv server ../
 
 client: client.c
 	gcc client.c -o client
+	mv client ../
